--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 *::before,
 *::after {
     margin: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
 .page-wrapper {
@@ -13,7 +14,6 @@
 }
 
 .calculator-container {
-    flex-wrap: wrap;
     display: flex;
     flex-direction: column;
     background-color: red;
@@ -22,8 +22,13 @@
 }
 
 .calculator-display {
-    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
+    width: 450px;
     height: 50px;
+    padding: 5px;
     margin: 20px auto 20px;
     background-color: green;
     border-radius: 5px;
@@ -31,10 +36,22 @@
     box-shadow: inset 2px 2px black;
 }
 
+.result {
+    font-size: 28px;
+}
+
 button {
-    width: 75px;
-    height: 55px;
+    font-size: 50px;
+    font-weight: bold;
+    width: 105px;
+    height: 75px;
     margin: 2px;
     border-radius: 5px;
     box-shadow: 3px 3px 5px black;
+}
+
+.button-container {
+    padding: 5px;
+    border-radius: 2px;
+    background-color: grey;
 }
