--- a/styles.css
+++ b/styles.css
@@ -45,19 +45,24 @@ body {
     justify-content: space-between;
 }
 
-.calculator-display {
-    font-size: 36px;
-    padding-right: 5px;
+.calculator-display-container {
+    padding: 10px;
     margin: 15px auto;
-    width: 400px;
-    height: 70px;
     background-color: rgb(130, 186, 47);
     display: flex;
-    align-items: center;
-    justify-content: end;
+    flex-direction: column;
+    align-items: end;
     box-shadow: 2px 2px 5px inset black;
     border-radius: 5px;
     border: 1px solid var(--accents-dark);
+}
+
+.calculator-operation-display {
+    font-size: 20px;
+}
+
+.calculator-display {
+    font-size: 40px;
 }
 
 .calculator-container {
